# OPN2BankEditor

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FMBankEdit.pro  README.md  WOPN-and-OPNI-Specification.txt  appveyor.yml  build.bat  changelog.txt
.github/workflows/: macos-ci.yml  ubuntu-ci.yml  windows-ci.yml
Bank_Examples/: dummy.wopn  gm.wopn  lead&bass.opni  xg.wopn
Bank_Examples/BambooTracker/Lotus/: Bass.bti  Lead 1.bti  Piano.bti  Pick Synth.bti
Bank_Examples/BambooTracker/Underwater Ruins OPNA/: Bottle Blow.bti  Echo Piano Bell.bti  Piano Bell.bti  Strings.bti  Synth Bass.bti
Bank_Examples/BambooTracker/breeze2608/: bass 2.bti  d.piano.bti  d.squarewave.bti  e.piano.bti  melody.bti  p.synth.bti  slap bass.bti  synth lead 1.bti  synth slow.bti
Bank_Examples/GEMS-FMLib/: patch.bnk
Bank_Examples/GEMS-Ship/: patch.bnk
Bank_Examples/GYB-nineko/: Instruments.gyb  Instruments_WinFM.gyb  fmmidi_programs.gyb  fmmidi_programs_volfix.gyb
Bank_Examples/GYBv3-mid2smps/: Instruments.gyb
Bank_Examples/Instruments/: BassDrum1.opni  BassDrum2.opni  Bassoon.opni  BongoHi.opni  BongoLo.opni  BrassSection.opni  ChifLead.opni  ChorusPiano.opni  Clarinet.opni  CongaHiMu.opni  CongaHiOp.opni  CongaLo.opni  Distortion (ThunderForce IV).opni  ElectricPiano.opni  FingerBass.opni  FretlessBass.opni  Hammond.opni  Harmonica.opni  LeadBass.opni  Marimba.opni  MutedGuitar.opni  Overdirve(ThunderForce IV).opni  Overdrive (Ported from OPL3).opni  Piccolo.opni  PickBass.opni  PolySynth.opni  Saw.opni  SlapBass.opni  SynthBass1.opni  SynthBass2.opni  SynthStrings2.opni  Trombone.opni  Trumpet.opni  Tuba.opni  Vibraphone.opni  Whistle.opni  Xylophone.opni
Bank_Examples/Instruments/DMP_Samples/: Flute-fixed.dmp  Flute.dmp  Vibraphone.dmp  bird.dmp
Bank_Examples/Instruments/Totsugeki Mix (DMP)/: Brass 2.dmp  Brass 3.dmp  Brass 4.dmp  Brass 5.dmp  Brass 6.dmp  Brass 7.dmp  Brass Fade.dmp  Brass.dmp  Buzz Synth.dmp  Closed Hihat 2.dmp  Closed Hihat 3.dmp  Closed Hihat 4.dmp  Closed Hihat.dmp  Crash 2.dmp  Crash.dmp  Crystal 2.dmp  Crystal 3.dmp  Crystal 4.dmp  Crystal 5.dmp  Crystal.dmp  Distortion Guitar 2.dmp  Distortion Guitar 3.dmp  Distortion Guitar Shred.dmp  Distortion Guitar.dmp  Double Bass.dmp  Finger Bass 2.dmp  Finger Bass 3.dmp  Finger Bass.dmp  French Horn.dmp  Hammond Organ.dmp  Harmonica.dmp  Kick 2.dmp  Kick 3.dmp  Kick 4.dmp  Kick 5.dmp  Kick 6.dmp  Kick 7.dmp  Kick 8.dmp  Kick.dmp  Light Snare.dmp  (+73 more)
Bank_Examples/Instruments/shiru (TFI)/: acoustic_bass.tfi  chip1.tfi  chip2.tfi  chip3.tfi  crash_(c6).tfi  electric_bass_2.tfi  feedback.tfi  hat1.tfi  hat2.tfi  hat3_(c6).tfi  heavy.tfi  kick1_(c1).tfi  kick2_(c1).tfi  kick3_(c1).tfi  kick4_(c1).tfi  kick5_(c2).tfi  kick6_(c2).tfi  kick7_(c2).tfi  kick_hardcore1_(c1c2).tfi  kick_hardcore2_(c2).tfi  kick_hardcore3_(c1).tfi  kick_synth1_(c1c2).tfi  kick_synth2_(c1c2).tfi  kick_synth3_(c2).tfi  metallic_perc.tfi  musicbox.tfi  ride_(c6).tfi  sine.tfi  snare1_(c6).tfi  snare2_(c6).tfi  snare3_(c6).tfi  snare4_(c2).tfi  snare5_(c6).tfi  snare6_(c6).tfi  snare7_(c6).tfi  solo_overdrive.tfi  square.tfi  synth_bass1.tfi  synth_bass2.tfi  synth_bass3.tfi  (+10 more)
Bank_Examples/Other banks/: Tomsoft-orig.wopn
Bank_Examples/Tomsoft banks/: default.gin
Bank_Examples/Y12/: BattleToads_Bass.y12  BattleToads_Melody.y12  Battletoads_High_Bass.y12  SY_Bass.y12  SY_Ins0.y12  SY_Main1.y12  SY_Main2.y12  Time Trax_Bass.y12  Time_Trax_Guitar.y12  Time_Trax_Guitar_Bass2.y12  Time_Trax_Kick.y12  Time_Trax_Laser.y12  Time_Trax_Pad.y12  bandoneon.y12  bandoneon_chord.y12
Bank_Examples/YMX/: S2b-81.ymx  Saxman.ymx  Txa.ymx  Txb.ymx  Txc.ymx  Txd.ymx
Bank_Examples/old_banks/: gm.wopn
Specifications/: DMP_SPECS.txt  GEMS-file-specification.txt  GIN-file-specificatin.txt  GYB-file-specification (OLD).txt  GYB-file-specification.txt  WOPN-and-OPNI-Specification-draft.txt  WOPN-and-OPNI-Specification.txt  YM2612.odt  s98spec2.txt  s98spec3.txt  tfi format.txt
_Misc/: YM2612.odt
cmake/: deploy.cmake  library_qt.cmake
src/: audio.cpp  audio_config.h  bank.cpp  bank.h  bank_comparison.cpp  bank_comparison.h  bank_editor.cpp  bank_editor.h  bank_editor.ui  bank_type_dlg.cpp  common.cpp  common.h  controlls.cpp  delay_analysis.cpp  delay_analysis.h  formats_sup.cpp  formats_sup.h  importer.cpp  importer.h  importer.ui  ins_names.cpp  ins_names.h  ins_names_data.h  inst_list_model.cpp  inst_list_model.h  main.cpp  main.h  metaparameter.h  operator_editor.cpp  operator_editor.h  operator_editor.ui  piano.cpp  piano.h  proxystyle.cpp  proxystyle.h  register_editor.cpp  register_editor.h  register_editor.ui  version.h
src/FileFormats/: ffmt_base.cpp  ffmt_base.h  ffmt_enums.cpp  ffmt_enums.h  ffmt_factory.cpp  ffmt_factory.h  format_bamboo_bti.cpp  format_bamboo_bti.h  format_deflemask_dmp.cpp  format_deflemask_dmp.h  format_gems_pat.cpp  format_gems_pat.h  format_gens_y12.cpp  format_gens_y12.h  format_gym_import.cpp  format_gym_import.h  format_m2v_gyb.cpp  format_m2v_gyb.h  format_m2v_gyb_checksum.h  format_mucom88_dat.cpp  format_mucom88_dat.h  format_opm.cpp  format_opm.h  format_s98_import.cpp  format_s98_import.h  format_saxman_ymx.cpp  format_saxman_ymx.h  format_tfi.cpp  format_tfi.h  format_tomsoft_gin.cpp  format_tomsoft_gin.h  format_tx81z_import.cpp  format_tx81z_import.h  format_vgi.cpp  format_vgi.h  format_vgm_import.cpp  format_vgm_import.h  format_wohlstand_opn2.cpp  format_wohlstand_opn2.h  text_format.cpp  (+14 more)
src/audio/: ao_alsa.cpp  ao_alsa.h  ao_base.cpp  ao_base.h  ao_qtmm.cpp  ao_qtmm.h  ao_rtaudio.cpp  ao_rtaudio.h
src/opl/: generator.cpp  generator.h  generator_realtime.cpp  generator_realtime.h  measurer.cpp  measurer.h
src/opl/chips/: chipset.cmake  chipset.pri  gens_opn2.cpp  gens_opn2.h  gx_opn2.cpp  gx_opn2.h  (+17 more)
src/resources/: file_opni.icns  file_wopn.icns  info.plist.in  make_icns.sh  opn2.icns  opn2_bank_editor.desktop  res.rc  resources.qrc
src/translations/: opn2bankeditor_fr_FR.ts  opn2bankeditor_pl_PL.ts  opn2bankeditor_ru_RU.ts
utils/measurer/: measurer-tool.cpp  measurer.cpp
(+29 files in other folders)
